@@ -1,11 +1,12 @@
 package com.momo.init;
 
+import static com.momo.Profile.DEVELOP;
+import static com.momo.domain.district.entity.City.SEOUL;
+
 import com.momo.domain.district.entity.City;
 import com.momo.domain.group.entity.Category;
 import com.momo.domain.group.entity.Group;
-import com.momo.domain.group.entity.Participant;
 import com.momo.domain.group.repository.GroupRepository;
-import com.momo.domain.group.repository.ParticipantRepository;
 import com.momo.domain.post.entity.Post;
 import com.momo.domain.post.entity.PostType;
 import com.momo.domain.post.repository.PostRepository;
@@ -32,30 +33,32 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 @Component
-@Profile("dev")
+@Profile(DEVELOP)
 @RequiredArgsConstructor
 public class MockDataLoader implements CommandLineRunner {
 
-    private static final int MAX_GROUP_COUNT = 50;
-    private static final int MAX_USER_COUNT = 500;
-    private static final int MAX_POST_COUNT = 30;
-    private static final int MAX_SCHEDULE_COUNT = 30;
-    private static final List<String> UNIVERSITIES =
-        Arrays.asList("서울대학교", "연세대학교", "고려대학교", "서강대학교", "성균관대학교", "한양대학교");
-    private static final List<String> DISTRICTS =
-        Arrays.asList("강남구", "강동구", "은평구", "서초구", "송파구", "종로구", "마포구");
-    private static final List<City> CITIES = List.of(City.SEOUL);
+    /**
+     * 유저 수 : 100, 모임 수 : 5만, 게시물 + 공지사항 수 : 10만, 일정 수 : 10만
+     */
+
+    private static final int NUMBER_OF_USERS = 100;
+    private static final int NUMBER_OF_GROUPS_PER_USER = 500;
+    private static final int NUMBER_OF_POSTS_PER_GROUP = 2;
+    private static final int NUMBER_OF_SCHEDULES_PER_GROUP = 2;
+
+    private static final List<String> UNIVERSITIES = Arrays.asList("서울대학교", "연세대학교", "고려대학교");
+    private static final List<String> DISTRICTS = Arrays.asList("강남구", "서초구", "송파구");
+    private static final List<City> CITIES = List.of(SEOUL);
 
     private final UserRepository userRepository;
     private final GroupRepository groupRepository;
-    private final ParticipantRepository participantRepository;
     private final PostRepository postRepository;
     private final ScheduleRepository scheduleRepository;
 
     @Override
     public void run(String... args) {
-        long savedUserCount = userRepository.count();
-        if (savedUserCount > 0) {
+        if (userRepository.count() > 0 || groupRepository.count() > 0 ||
+            postRepository.count() > 0 || scheduleRepository.count() > 0) {
             return;
         }
         insertTestData();
@@ -63,117 +66,77 @@ public class MockDataLoader implements CommandLineRunner {
 
     @Transactional
     public void insertTestData() {
-        List<User> savedManagers = insertManager();
-        List<Group> savedGroups = insertGroup(savedManagers);
-        List<User> savedUsers = insertUser();
-        insertParticipant(savedGroups, savedUsers);
-        insertPost(savedGroups);
-        insertSchedule(savedGroups);
+        List<User> users = saveUsers();
+        List<Group> groups = saveGroups(users);
+        savePosts(groups);
+        insertSchedule(groups);
     }
 
-    public List<User> insertManager() {
-        List<User> managers = new ArrayList<>();
-        for (int count = 1; count <= MAX_GROUP_COUNT; count++) {
+    public List<User> saveUsers() {
+        List<User> users = new ArrayList<>();
+        for (int count = 1; count <= NUMBER_OF_USERS; count++) {
             Collections.shuffle(UNIVERSITIES);
             Collections.shuffle(DISTRICTS);
             User manager = User.builder()
                 .loginInfo(LoginInfo.createEmptyRefreshToken(SocialProvider.KAKAO, String.valueOf(count)))
-                .nickname("모임장" + count)
+                .nickname("테스트 유저" + count)
                 .location(Location.builder()
                     .university(UNIVERSITIES.get(0))
                     .city(CITIES.get(0))
                     .district(DISTRICTS.get(0))
                     .build())
                 .build();
-            managers.add(manager);
+            users.add(manager);
         }
-        return userRepository.saveAll(managers);
+        return userRepository.saveAll(users);
     }
 
-    public List<Group> insertGroup(List<User> managers) {
-        Random random = new Random();
+    public List<Group> saveGroups(List<User> users) {
         List<Group> groups = new ArrayList<>();
         List<Category> categories = Stream.of(Category.values()).collect(Collectors.toList());
-        for (int count = 1; count <= MAX_GROUP_COUNT; count++) {
-            Collections.shuffle(categories);
-            Collections.shuffle(UNIVERSITIES);
-            Collections.shuffle(DISTRICTS);
-            Group group = Group.builder()
-                .manager(managers.get(count - 1))
-                .name("모임" + count)
-                .category(categories.get(0))
-                .startDate(createRandomDate())
-                .location(Location.builder()
-                    .university(UNIVERSITIES.get(0))
-                    .city(CITIES.get(0))
-                    .district(DISTRICTS.get(0))
-                    .build())
-                .introduction("모임 설명")
-                .recruitmentCnt(random.nextInt(100) + 10)
-                .isOffline(count % 2 == 0)
-                .isEnd(false)
-                .build();
-            groups.add(group);
+
+        int groupIdx = 1;
+        for (int i = 1; i <= NUMBER_OF_USERS; i++) {
+            for (int j = 1; j <= NUMBER_OF_GROUPS_PER_USER; j++) {
+                Collections.shuffle(categories);
+                Collections.shuffle(UNIVERSITIES);
+                Collections.shuffle(DISTRICTS);
+                Group group = Group.builder()
+                    .manager(users.get(i - 1))
+                    .name("테스트 모임" + groupIdx++)
+                    .category(categories.get(0))
+                    .startDate(getRandomDate())
+                    .location(Location.builder()
+                        .university(UNIVERSITIES.get(0))
+                        .city(CITIES.get(0))
+                        .district(DISTRICTS.get(0))
+                        .build())
+                    .introduction("모임 설명")
+                    .recruitmentCnt(20)
+                    .isOffline(j % 2 == 0)
+                    .isEnd(false)
+                    .build();
+                groups.add(group);
+            }
         }
         return groupRepository.saveAll(groups);
     }
 
-    public LocalDate createRandomDate() {
+    public LocalDate getRandomDate() {
         Random random = new Random();
         int month = random.nextInt(11) + 1;
         int day = random.nextInt(27) + 1;
         return LocalDate.of(2021, month, day);
     }
 
-    public List<User> insertUser() {
-        List<User> users = new ArrayList<>();
-        for (int count = 1; count <= MAX_USER_COUNT; count++) {
-            Collections.shuffle(UNIVERSITIES);
-            Collections.shuffle(DISTRICTS);
-            User user = User.builder()
-                .loginInfo(LoginInfo.createEmptyRefreshToken(SocialProvider.KAKAO, String.valueOf(MAX_GROUP_COUNT + count)))
-                .nickname("참여자" + count)
-                .location(Location.builder()
-                    .university(UNIVERSITIES.get(0))
-                    .city(CITIES.get(0))
-                    .district(DISTRICTS.get(0))
-                    .build())
-                .build();
-            users.add(user);
-        }
-        return userRepository.saveAll(users);
-    }
-
-    public void insertParticipant(List<Group> groups, List<User> users) {
-        List<Participant> participants = new ArrayList<>();
-        int userCount = 0;
-        for (Group group : groups) {
-            Participant manager = Participant.builder()
-                .user(group.getManager())
-                .group(group)
-                .build();
-            participants.add(manager);
-
-            for (int count = userCount; count < userCount + 5; count++) {
-                Participant participant = Participant.builder()
-                    .user(users.get(count))
-                    .group(group)
-                    .build();
-                participants.add(participant);
-            }
-            userCount += 5;
-        }
-        participantRepository.saveAll(participants);
-    }
-
-    public void insertPost(List<Group> groups) {
+    public void savePosts(List<Group> groups) {
         List<Post> posts = new ArrayList<>();
         for (Group group : groups) {
-            for (int count = 1; count <= MAX_POST_COUNT; count++) {
+            for (int count = 1; count <= NUMBER_OF_POSTS_PER_GROUP; count++) {
                 Post post = Post.builder()
                     .author(group.getManager())
                     .group(group)
-                    .title("게시물" + count)
+                    .title(group.getName() + "의 게시물" + count)
                     .contents("게시물 내용")
                     .type(count % 2 == 0 ? PostType.NOTICE : PostType.NORMAL)
                     .build();
@@ -186,14 +149,14 @@ public class MockDataLoader implements CommandLineRunner {
     public void insertSchedule(List<Group> groups) {
         List<Schedule> schedules = new ArrayList<>();
         for (Group group : groups) {
-            for (int count = 1; count <= MAX_SCHEDULE_COUNT; count++) {
+            for (int count = 1; count <= NUMBER_OF_SCHEDULES_PER_GROUP; count++) {
                 Schedule schedule = Schedule.builder()
                     .author(group.getManager())
                     .group(group)
-                    .title("일정" + count)
+                    .title(group.getName() + "의 일정" + count)
                     .contents("일정 내용")
                     .isOffline(count % 2 == 0)
-                    .startDateTime(createRandomDateTime())
+                    .startDateTime(getRandomDateTime())
                     .build();
                 schedules.add(schedule);
             }
@@ -201,7 +164,7 @@ public class MockDataLoader implements CommandLineRunner {
         scheduleRepository.saveAll(schedules);
     }
 
-    public LocalDateTime createRandomDateTime() {
+    public LocalDateTime getRandomDateTime() {
         Random random = new Random();
         int month = random.nextInt(11) + 1;
         int day = random.nextInt(27) + 1;
